--- a/src/components/Globalstyles/DlobalStyles.scss
+++ b/src/components/Globalstyles/DlobalStyles.scss
@@ -3,10 +3,14 @@
 
 :root {
     --primary: #fe2c56;
+    --default-layout-header-height: 60px;
+    --default-layout-header-width: 1150px;
 }
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
